src/test/ui/type-inference/sort_by_key.stderr
error[E0283]: type annotations needed
  --> $DIR/sort_by_key.rs:3:9
   |
LL |     lst.sort_by_key(|&(v, _)| v.iter().sum());
   |         ^^^^^^^^^^^ cannot infer type for type parameter `K` declared on the associated function `sort_by_key`
   |
   = note: cannot satisfy `_: Ord`
help: consider specifying the type argument in the method call
   |
LL |     lst.sort_by_key(|&(v, _)| v.iter().sum::<S>());
   |                                           ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
